@@ -110,10 +110,7 @@ window.title = "simple"
 window.resize_mode = Gtk::RESIZE_IMMEDIATE
 # Get automatically redrawn if any of their children changed allocation.
 window.reallocate_redraws = true
-window.signal_connect("delete_event") do
-    Gtk.main_quit
-    true
-end
+window.signal_connect("delete_event") { Gtk.main_quit }
 
 # VBox
 vbox = Gtk::VBox.new
