@@ -1,3 +1,7 @@
+2003-12-29 Vincent Isambart <isambart@netcourrier.com>
+
+	* sample/*.rb: corrected the behavior when closing the window.
+
 2003-12-26 Vincent Isambart <isambart@netcourrier.com>
 
 	* src/rbgdkglext.c: mGdk and mGdk are no more global variables.
